[package]
name = "origin-studio"
version = "0.9.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "An alternative `std`-like implementation built on origin"
documentation = "https://docs.rs/origin-studio"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/origin-studio"
edition = "2021"
keywords = ["linux"]
categories = ["no-std"]

[dependencies]
origin = { version = "0.16.0", default-features = false, features = ["origin-program", "origin-signal", "origin-start"] }
rustix = { version = "0.38.11", default-features = false, optional = true }
rustix-dlmalloc = { version = "0.1.0", features = ["global"], optional = true }
rustix-futex-sync = { version = "0.2.1", features = ["atomic_usize"], optional = true }
atomic-dbg = { version = "0.1.8", default-features = false, optional = true }

[dev-dependencies]
compiler_builtins = { version = "0.1.101", features = ["mem"] }
libc = { version = "0.2.148", default-features = false }
errno = { version = "0.3.3", default-features = false }

[features]
default = ["std", "thread", "stack-overflow"]

# Provide a `std`-like API.
std = ["alloc", "rustix/stdio", "rustix/fs"]

# Provide the `alloc` API.
alloc = ["rustix-dlmalloc", "origin/alloc"]

# Support threads
thread = ["origin/origin-thread", "rustix-futex-sync"]

# Enable debug logging.
log = ["origin/log", "origin/atomic-dbg-logger"]

# Enable Rust's stack overflow reporting code.
stack-overflow = ["rustix/mm"]

# Enable highly experimental support for performing startup-time relocations,
# needed to support statically-linked PIE executables.
experimental-relocate = ["origin/experimental-relocate"]
